added: fuzzy set for edge based speed controller

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,23 @@
 .ipynb_checkpoints
 */.ipynb_checkpoints/*
+
+venv/
+.env
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+*.sqlite3
+.DS_Store
+*.log
+*.env
+*.egg-info/
+dist/
+build/
+.cache/
+.mypy_cache/
+.idea/
+.vscode/
+*.swp
+*.bak
+*.tmp
